--- a/.hgrc
+++ b/.hgrc
@@ -20,6 +20,11 @@ firefoxtree = ~/.mozbuild/version-control-tools/hgext/firefoxtree
 push-to-try = ~/.mozbuild/version-control-tools/hgext/push-to-try
 mqext = ~/.mozbuild/version-control-tools/hgext/mqext
 qimportbz = ~/.mozbuild/version-control-tools/hgext/qimportbz
+[mozilla]
+ircnick = KingstonTime
+[paths]
+# For SSH pushing
+review = ssh://reviewboard-hg.mozilla.org/autoreview
 [alias]
 wip = log --graph --rev=wip --template=wip
 [revsetalias]
